--- a/notes/01_pca/Makefile
+++ b/notes/01_pca/Makefile
@@ -11,7 +11,7 @@ projnameA = $(projname).notes
 slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 #	bibtex $(projname).slides
-#	$(compile) --interaction=batchmode  $(projname).slides.tex
+	$(compile) --interaction=batchmode  $(projname).slides.tex
 #	$(compile) --interaction=batchmode  $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
@@ -23,7 +23,7 @@ handout: $(projname).handout.tex $(projname).tex
 notes: $(projname).notes.tex $(projname).tex
 	$(compile) $(projname).notes.tex
 #	bibtex $(projname).notes
-#	$(compile) --interaction=batchmode  $(projname).notes.tex
+	$(compile) --interaction=batchmode  $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
 
