--- a/notes/00_lagrange/Makefile
+++ b/notes/00_lagrange/Makefile
@@ -11,7 +11,7 @@ projnameA = $(projname).notes
 slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 #	bibtex $(projname).slides
-#	$(compile) --interaction=batchmode  $(projname).slides.tex
+	$(compile) --interaction=batchmode  $(projname).slides.tex
 #	$(compile) --interaction=batchmode   $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
@@ -21,9 +21,9 @@ handout: $(projname).handout.tex $(projname).tex
 
 # Repeat compilation for the references to show up correctly
 notes: $(projname).notes.tex $(projname).tex
-	$(compile) $(projname).notes.tex
+#	$(compile) $(projname).notes.tex
 #	bibtex $(projname).notes
-#	$(compile) --interaction=batchmode  $(projname).notes.tex
+	$(compile) --interaction=batchmode  $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
 
