--- a/notes/00_lagrange/Makefile
+++ b/notes/00_lagrange/Makefile
@@ -21,7 +21,7 @@ handout: $(projname).handout.tex $(projname).tex
 
 # Repeat compilation for the references to show up correctly
 notes: $(projname).notes.tex $(projname).tex
-#	$(compile) $(projname).notes.tex
+	$(compile) $(projname).notes.tex
 #	bibtex $(projname).notes
 	$(compile) --interaction=batchmode  $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
