--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
-dist: trusty
+#dist: trusty
+language: r
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -qq -y --no-install-recommends texlive-fonts-recommended
   texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-beamer
