--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ sudo: required
 #dist: trusty
 language: r
 before_install:
-- sudo apt-get -qq update && sudo apt-get install -qq -y --no-install-recommends texlive-fonts-recommended
-  texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-beamer
-  texlive-science
-- sudo tlmgr init-usertree
-- sudo tlmgr install --reinstall --repository https://www.komascript.de/repository/texlive/2020 koma-script
+#- sudo apt-get -qq update && sudo apt-get install -qq -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-beamer texlive-science
+- tlmgr install index
+#- sudo tlmgr init-usertree
+#- sudo tlmgr install --reinstall --repository https://www.komascript.de/repository/texlive/2020 koma-script
 script:
 - bash .ci/travis/make_all.sh
 after_success:
