--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: required
 #dist: trusty
-language: r
+#language: r
 before_install:
-#- sudo apt-get -qq update && sudo apt-get install -qq -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-beamer texlive-science
-- tlmgr install index
+- sudo apt-get -qq update && sudo apt-get install -qq -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-beamer texlive-science
+#- tlmgr install index
 #- sudo tlmgr init-usertree
 #- tlmgr install --reinstall --repository https://www.komascript.de/repository/texlive/2020 koma-script\
 install: skip
