--- a/notes/02_online-pca/Makefile
+++ b/notes/02_online-pca/Makefile
@@ -12,6 +12,7 @@ slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 	bibtex $(projname).slides
 	$(compile) $(projname).slides.tex
+	$(compile) $(projname).slides.tex
 #	$(compile) --interaction=batchmode   $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
@@ -23,6 +24,7 @@ handout: $(projname).handout.tex $(projname).tex
 notes: $(projname).notes.tex $(projname).tex
 	$(compile) $(projname).notes.tex
 	bibtex $(projname).notes
+	$(compile) $(projname).notes.tex
 	$(compile) $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
