--- a/notes/05_infomax/Makefile
+++ b/notes/05_infomax/Makefile
@@ -11,9 +11,10 @@ projnameA = $(projname).notes
 slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 	$(compile) $(projname).slides.tex
-#	bibtex $(projname).slides
-#	$(compile) --interaction=batchmode  $(projname).slides.tex
-#	$(compile) --interaction=batchmode  $(projname).slides.tex
+	bibtex $(projname).slides
+#	$(compile) $(projname).slides.tex
+	$(compile) --interaction=batchmode  $(projname).slides.tex
+	$(compile) --interaction=batchmode  $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
 handout: $(projname).handout.tex $(projname).tex
@@ -24,8 +25,9 @@ handout: $(projname).handout.tex $(projname).tex
 notes: $(projname).notes.tex $(projname).tex
 	$(compile) $(projname).notes.tex
 #	$(compile) $(projname).notes.tex
-#	bibtex $(projname).notes
-	$(compile) --interaction=batchmode  $(projname).notes.tex
+	bibtex $(projname).notes
+	$(compile) $(projname).notes.tex
+#	$(compile) --interaction=batchmode  $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
 
