--- a/notes/05_infomax/Makefile
+++ b/notes/05_infomax/Makefile
@@ -13,8 +13,8 @@ slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 	bibtex $(projname).slides
 #	$(compile) $(projname).slides.tex
-	$(compile) --interaction=batchmode  $(projname).slides.tex
-	$(compile) --interaction=batchmode  $(projname).slides.tex
+#	$(compile) --interaction=batchmode  $(projname).slides.tex
+#	$(compile) --interaction=batchmode  $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
 handout: $(projname).handout.tex $(projname).tex
@@ -26,7 +26,7 @@ notes: $(projname).notes.tex $(projname).tex
 	$(compile) $(projname).notes.tex
 #	$(compile) $(projname).notes.tex
 	bibtex $(projname).notes
-	$(compile) $(projname).notes.tex
+#	$(compile) $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
