--- a/notes/05_infomax/Makefile
+++ b/notes/05_infomax/Makefile
@@ -13,7 +13,7 @@ slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 	bibtex $(projname).slides
 #	$(compile) $(projname).slides.tex
-#	$(compile) --interaction=batchmode  $(projname).slides.tex
+	$(compile) --interaction=batchmode  $(projname).slides.tex
 #	$(compile) --interaction=batchmode  $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
@@ -24,10 +24,10 @@ handout: $(projname).handout.tex $(projname).tex
 # Repeat compilation for the references to show up correctly
 notes: $(projname).notes.tex $(projname).tex
 	$(compile) $(projname).notes.tex
-#	$(compile) $(projname).notes.tex
+	$(compile) $(projname).notes.tex
 	bibtex $(projname).notes
 #	$(compile) $(projname).notes.tex
-#	$(compile) --interaction=batchmode  $(projname).notes.tex
+	$(compile) --interaction=batchmode  $(projname).notes.tex
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
 
