--- a/notes/05_infomax/Makefile
+++ b/notes/05_infomax/Makefile
@@ -12,7 +12,7 @@ slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
 	$(compile) $(projname).slides.tex
 	bibtex $(projname).slides
-#	$(compile) $(projname).slides.tex
+	$(compile) $(projname).slides.tex
 	$(compile) --interaction=batchmode  $(projname).slides.tex
 #	$(compile) --interaction=batchmode  $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
