--- a/notes/07_stochopt/Makefile
+++ b/notes/07_stochopt/Makefile
@@ -10,9 +10,10 @@ projnameA = $(projname).notes
 
 slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
-#	bibtex $(projname).slides
+#	$(compile) $(projname).slides.tex
+	bibtex $(projname).slides
 	$(compile) --interaction=batchmode  $(projname).slides.tex
-#	$(compile) --interaction=batchmode  $(projname).slides.tex
+	$(compile) --interaction=batchmode  $(projname).slides.tex
 	mv $(projname).slides.pdf $(targetname).slides.pdf 
 
 handout: $(projname).handout.tex $(projname).tex
@@ -22,10 +23,10 @@ handout: $(projname).handout.tex $(projname).tex
 # Repeat compilation for the references to show up correctly
 notes: $(projname).notes.tex $(projname).tex
 	$(compile) $(projname).notes.tex
-#	$(compile) $(projname).notes.tex
-#	bibtex $(projname).notes
+	$(compile) $(projname).notes.tex
+	bibtex $(projname).notes
 	$(compile) --interaction=batchmode  $(projname).notes.tex
-#	$(compile) --interaction=batchmode  $(projname).notes.tex
+	$(compile) --interaction=batchmode  $(projname).notes.tex
 	mv $(projname).notes.pdf $(targetname).notes.pdf 
 
 clean: cleans cleanh cleana
