--- a/notes/11_density-est/Makefile
+++ b/notes/11_density-est/Makefile
@@ -10,6 +10,7 @@ projnameA = $(projname).notes
 
 slides: $(projname).slides.tex $(projname).tex
 	$(compile) $(projname).slides.tex
+	$(compile) $(projname).slides.tex
 #	bibtex $(projname).slides
 #	$(compile) --interaction=batchmode  $(projname).slides.tex
 #	$(compile) --interaction=batchmode  $(projname).slides.tex
@@ -21,6 +22,7 @@ handout: $(projname).handout.tex $(projname).tex
 
 # Repeat compilation for the references to show up correctly
 notes: $(projname).notes.tex $(projname).tex
+	$(compile) $(projname).notes.tex
 	$(compile) $(projname).notes.tex
 #	bibtex $(projname).notes
 #	$(compile) --interaction=batchmode  $(projname).notes.tex
