--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
 - bash .ci/travis/zip_pdfs.sh
 deploy:
   provider: releases
-  api_key: "GITHU8_API_KEY"
+  api_key: "$GITHU8_API_KEY"
   file_glob: true
   file:
   - "./notes/**/tutorial_*.slides.pdf"
