--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-sudo: required
-#dist: trusty
+dist: bionic
 #language: r
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -qq -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-beamer texlive-science
@@ -13,7 +12,7 @@ after_success:
 - bash .ci/travis/zip_pdfs.sh
 deploy:
   provider: releases
-  api_key: "$GITHU8_API_KEY"
+  token: "$GITHU8_API_KEY"
   file_glob: true
   file:
   - "./notes/**/tutorial_*.slides.pdf"
