--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: true
+          prerelease: false
           files: |
             ./notes/**/tutorial_*.slides.pdf
             ./notes/**/tutorial_*.notes.pdf
